namespace/istio-test/1-ingress-bank-integration.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bank-integration-gw
  namespace: istio-test
spec:
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
  servers:
    - hosts:
        - bain-integration.com
    - port:
        number: 80
        name: http
        protocol: HTTP
